--- a/index.html
+++ b/index.html
@@ -29,192 +29,192 @@
             </div>
         </div>
 
+        <div class=<startPage">
+            <div class="row">
+                <div class="col-md-12" style="border:1px solid pink">
+                    <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Start</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="game">
         <div class="row">
             <div class="col-md-12" style="border:1px solid pink">
-                <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Start</button>
+                <h2 id="timer">
+                    </h1>
+            </div>
+        </div>
+        <!-- Question 1  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">The word "yoga" is derived from a Sanskrit word that means "union"</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
             </div>
         </div>
 
-        <div class="game">
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h2 id="timer">
-                        </h1>
+        <!-- Question 2  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">Yoga originates from Thailand</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
                 </div>
             </div>
-            <!-- Question 1  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">The word "yoga" is derived from a Sanskrit word that means "union"</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 2  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">Yoga originates from Thailand</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 3  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">There are 26 postures in the Bikram Yoga series</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-            <!-- Question 4  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">The 5th chakra signifies the process of enlightenment</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- Question 5  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">The Yamas represent moral and ethical rules</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 6  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">Pranayama refers to how far the spine will bend</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Question 6  -->
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <h3 id="question">There are eight limbs in the practice of Ashtanga yoga</h3>
-                </div>
-                <!-- Buttons  -->
-                <div class="col-md-12" style="border:1px solid pink">
-                    <!-- True Button-->
-                    <div class="custom-control custom-radio custom-control-inline trueBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline1"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline1">True</label>
-                    </div>
-                    <!-- False Button-->
-                    <div class="custom-control custom-radio custom-control-inline falseBtn">
-                        <input type="radio" class="custom-control-input" id="defaultInline2"
-                            name="inlineDefaultRadiosExample">
-                        <label class="custom-control-label" for="defaultInline2">False</label>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-
-
         </div>
+
+        <!-- Question 3  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">There are 26 postures in the Bikram Yoga series</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
+            </div>
+        </div>
+        <!-- Question 4  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">The 5th chakra signifies the process of enlightenment</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Question 5  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">The Yamas represent moral and ethical rules</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
+            </div>
+        </div>
+
+        <!-- Question 6  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">Pranayama refers to how far the spine will bend</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
+            </div>
+        </div>
+
+        <!-- Question 6  -->
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <h3 id="question">There are eight limbs in the practice of Ashtanga yoga</h3>
+            </div>
+            <!-- Buttons  -->
+            <div class="col-md-12" style="border:1px solid pink">
+                <!-- True Button-->
+                <div class="custom-control custom-radio custom-control-inline trueBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline1"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline1">True</label>
+                </div>
+                <!-- False Button-->
+                <div class="custom-control custom-radio custom-control-inline falseBtn">
+                    <input type="radio" class="custom-control-input" id="defaultInline2"
+                        name="inlineDefaultRadiosExample">
+                    <label class="custom-control-label" for="defaultInline2">False</label>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
         <!-- close game container  -->
     </div>
 
 
-    <!-- close bootstrap container  -->
+
+
+    <div class="scoreInfo">
+        <h4>All Done!</h4>
     </div>
-
-
-
-
-
-
 
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
