Updated radio buttons to act independently per question

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             </div>
         </div>
 
-        <div class=<startPage">
-            <div class="row">
-                <div class="col-md-12" style="border:1px solid pink">
-                    <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Start</button>
-                </div>
+
+        <div class="row">
+            <div class="col-md-12" style="border:1px solid pink">
+                <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Start</button>
             </div>
         </div>
     </div>
+
 
 
 
@@ -52,85 +52,86 @@
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">The word "yoga" is derived from a Sanskrit word that means "union"</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true1" name="choice1" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false1" name="choice1" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
+
 
         <!-- Question 2  -->
         <div class="row">
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">Yoga originates from Thailand</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true2" name="choice2" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false2" name="choice2" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
+
+
+
+
+
 
         <!-- Question 3  -->
         <div class="row">
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">There are 26 postures in the Bikram Yoga series</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true3" name="choice3" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false3" name="choice3" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
+
+
         <!-- Question 4  -->
         <div class="row">
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">The 5th chakra signifies the process of enlightenment</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true4" name="choice4" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false4" name="choice4" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
 
@@ -140,20 +141,18 @@
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">The Yamas represent moral and ethical rules</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true5" name="choice5" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false5" name="choice5" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
 
@@ -162,20 +161,18 @@
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">Pranayama refers to how far the spine will bend</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true6" name="choice6" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false6" name="choice6" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
 
@@ -184,20 +181,18 @@
             <div class="col-md-12" style="border:1px solid pink">
                 <h3 id="question">There are eight limbs in the practice of Ashtanga yoga</h3>
             </div>
-            <!-- Buttons  -->
-            <div class="col-md-12" style="border:1px solid pink">
-                <!-- True Button-->
-                <div class="custom-control custom-radio custom-control-inline trueBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline1"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline1">True</label>
-                </div>
-                <!-- False Button-->
-                <div class="custom-control custom-radio custom-control-inline falseBtn">
-                    <input type="radio" class="custom-control-input" id="defaultInline2"
-                        name="inlineDefaultRadiosExample">
-                    <label class="custom-control-label" for="defaultInline2">False</label>
-                </div>
+        </div>
+        <!-- Buttons  -->
+        <div class="row">
+            <div class="col-sm-6" style="border:1px solid pink">
+                <!-- True Button  -->
+                <input type="radio" id="true7" name="choice7" value="true">
+                <label for="true">True</label><br>
+            </div>
+            <!-- False Button  -->
+            <div class="col-sm-6" style="border:1px solid pink">
+                <input type="radio" id="false7" name="choice7" value="false">
+                <label for="false">False</label><br>
             </div>
         </div>
 
@@ -205,9 +200,9 @@
 
 
 
-
         <!-- close game container  -->
     </div>
+
 
 
 
