Styled final page with score display

--- a/index.html
+++ b/index.html
@@ -230,17 +230,20 @@
 
 
 
+    <div class="start">
+        <div class="scoreInfo">
+            <div class="row">
+                <div class="col-md-12" style="border:1px solid pink">
+                    <h4>All Done!</h4>
 
-    <div class="scoreInfo">
-        <h4>All Done!</h4>
+                    <div class="correct">Correct: </div>
+                    <div class="incorrect">Incorrect:</div>
+                    <div class="unanswered"></div>
+                </div>
+            </div>
+        </div>
 
-        <div class="correct">Correct: </div>
-        <div class="incorrect">Incorrect:</div>
-        <div class="unanswered"></div>
-
-    </div>
-
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 
 </html>
