Worked further on true false logic

--- a/index.html
+++ b/index.html
@@ -87,19 +87,16 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <!-- True Button  -->
-                        <input type="radio" id="true2" name="choice2" value="true">
+                        <input type="radio" id="true2" name="choice2" value="trueB">
                         <label for="true">True</label><br>
                     </div>
                     <!-- False Button  -->
                     <div class="col-sm-6">
-                        <input type="radio" id="false2" name="choice2" value="false">
+                        <input type="radio" id="false2" name="choice2" value="falseB">
                         <label for="false">False</label><br>
                     </div>
                 </div>
             </div>
-
-
-
 
 
 
@@ -193,7 +190,7 @@
                 </div>
             </div>
 
-            <!-- Question 6  -->
+            <!-- Question 7 -->
             <div class="row">
                 <div class="col-md-12">
                     <h3 id="question">There are eight limbs in the practice of Ashtanga yoga.</h3>
@@ -216,8 +213,16 @@
             </div>
         </div>
         <!-- close game container  -->
-    </div>
+        <!-- </div> -->
 
+        <div class="done">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-secondary btn-lg btn-block doneBtn">Done</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -227,9 +232,8 @@
                 <div class="col-md-12">
                     <h4>All Done!</h4>
                     <br>
-                    <div class="correct">Correct: </div>
-                    <div class="incorrect">Incorrect:</div>
-                    <div class="unanswered"></div>
+                    <div class="correct">Correct: 0</div>
+                    <div class="incorrect">Incorrect: 0</div>
                 </div>
             </div>
         </div>
