Working on mobile responsiveness. All looks good except images

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
         </div>
 
+        <!-- div class="row justify-content-center"> -->
         <div class="start">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-12">
                     <div class="game">
                         <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
