Changed layout and styling. Header, intro bar, fonts and images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- boostrap  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- google font  -->
+    <link href='https://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet'>
     <!-- jquery  -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
@@ -27,25 +29,43 @@
 
         <div class="hero-image">
             <div class="hero-text">
-                <h1>Yoga Trivia</h1>
-                <h2> Let's test your knowledge of the ancient practice</h2>
+                <h1>YOGA TRIVIA</h1>
+                <!-- <h2> Let's test your knowledge of the ancient practice</h2> -->
             </div>
 
         </div>
 
-        <!-- div class="row justify-content-center"> -->
-        <div class="start">
-            <div class="row justify-content-center">
-                <div class="col-md-12">
-                    <div class="game">
-                        <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
-                            Start</button>
-                    </div>
+        <div class="top-bar">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3> Y O G A</h3>
+                </div>
+                <div class="col-md-8">
+                    <h4> The game that tests your knowledge of the ancient practice</h4>
                 </div>
             </div>
+        </div>
+        <!-- div class="row justify-content-center"> -->
+        <!-- <div class="start"> -->
+        <!-- <div class="container game"> -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="game">
+                    <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
+                        Start</button>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="gameR">
 
+                    <img src="./assets/images/yoga-2959226_1920.jpg" id="cover-image">
+                </div>
+            </div>
+        </div>
 
-            <script type="text/javascript" src="assets/javascript/app.js"></script>
+        </div>
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
+
     </body>
 
 </html>
