--- a/index.html
+++ b/index.html
@@ -47,22 +47,27 @@
         </div>
         <!-- div class="row justify-content-center"> -->
         <!-- <div class="start"> -->
-        <!-- <div class="container game"> -->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="game">
-                    <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
-                        Start</button>
+        <div class="container-fluid gameBox">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="game">
+                        <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
+                            Start</button>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <div class="gameR">
+
+                        <img src="./assets/images/yoga-2959226_1920.jpg" id="cover-image">
+                    </div>
                 </div>
             </div>
-            <div class="col-md-8">
-                <div class="gameR">
-
-                    <img src="./assets/images/yoga-2959226_1920.jpg" id="cover-image">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="gameB">
+                    </div>
                 </div>
             </div>
-        </div>
-
         </div>
         <script type="text/javascript" src="assets/javascript/app.js"></script>
 
