Cleaned up code on js and css

--- a/index.html
+++ b/index.html
@@ -4,73 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- reset -->
+    <!-- Reset -->
     <link rel="stylesheet" href="assets/css/reset.css">
-    <!-- boostrap  -->
+    <!-- Boostrap  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- google font  -->
+    <!-- Google font  -->
     <link href='https://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet'>
-    <!-- jquery  -->
+    <!-- Jquery  -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <!-- css  -->
+    <!-- CSS  -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 
     <title>Yoga Trivia</title>
 </head>
 
 <body>
-
-    <body>
-
-
-        <div class="hero-image">
-            <div class="hero-text">
-                <h1>YOGA TRIVIA</h1>
-                <!-- <h2> Let's test your knowledge of the ancient practice</h2> -->
-            </div>
-
+    <div class="hero-image">
+        <div class="hero-text">
+            <h1>YOGA TRIVIA</h1>
         </div>
+    </div>
 
-        <div class="top-bar">
-            <div class="row">
-                <div class="col-md-4">
-                    <h3> Y O G A</h3>
-                </div>
-                <div class="col-md-8">
-                    <h4> The game that tests your knowledge of the ancient practice</h4>
-                </div>
+    <div class="top-bar">
+        <div class="row">
+            <div class="col-md-4">
+                <h3> Y O G A</h3>
+            </div>
+            <div class="col-md-8">
+                <h4> The game that tests your knowledge of the ancient practice</h4>
             </div>
         </div>
-        <!-- div class="row justify-content-center"> -->
-        <!-- <div class="start"> -->
-        <div class="container-fluid gameBox">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="game">
-                        <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
-                            Start</button>
-                    </div>
-                </div>
-                <div class="col-sm-8">
-                    <div class="gameR">
+    </div>
 
-                        <img src="./assets/images/yoga-2959226_1920.jpg" id="cover-image">
-                    </div>
+    <div class="container-fluid gameBox">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="game">
+                    <button type="button" class="btn btn-secondary btn-lg btn-block startBtn">Click Here to
+                        Start</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="gameB">
-                    </div>
+            <div class="col-sm-8">
+                <div class="gameR">
+                    <img src="./assets/images/yoga-2959226_1920.jpg" id="cover-image">
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="assets/javascript/app.js"></script>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="gameB">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 
-    </body>
+</body>
 
 </html>
